# leptos-taskboard-sample

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  schema.sql  style.css  wrangler.toml
src/: app.rs  lib.rs  main.rs
