[package]
name = "taskboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", optional = true }
leptos = { version = "0.7.0" }
leptos_axum = { version = "0.7.0", optional = true }
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
uuid = { version = "1.11.0", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.99"
tower = "0.5.2"

[features]
default = []
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "dep:axum", "dep:tokio", "dep:tower-http", "dep:leptos_axum"]

[package.metadata.leptos]
output-name = "taskboard"
env = "DEV"
site-root = ""
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001