[package]
name = "taskboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, optional = true }
leptos = { version = "0.7.4" }
leptos_axum = { version = "0.7.4", default-features = false, optional = true }
serde = "1.0.217"
serde_json = { version = "1.0.137", optional = true }
tokio = { version = "1.43.0", default-features = false, optional = true }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
uuid = { version = "1.12.1", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.100"
tower = "0.5.2"
tower-service = {  version = "0.3.2", optional = true }
worker = { version = "0.5.0", default-features = false, optional = true }
worker-macros = { version = "0.5.0", features = ["http"], optional = true }
worker-kv = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = []
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "dep:axum", "axum/default", "dep:tokio", "tokio/rt-multi-thread", "tokio/macros", "dep:tower-http", "dep:leptos_axum", "leptos_axum/default"]
worker-hydrate = ["leptos/hydrate", "dep:worker"]
worker = ["leptos/ssr", "dep:leptos_axum", "leptos_axum/wasm", "dep:tower-service",  "dep:axum", "dep:worker", "worker/http", "worker/axum", "worker/d1", "dep:worker-macros", "dep:worker-kv", "dep:console_error_panic_hook"]

[package.metadata.leptos]
output-name = "taskboard"
env = "DEV"
site-root = ""
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001